Update encrypter not to use sun.misc classes. Also remove unused code. Add some test code