@@ -1,13 +1,19 @@
-// -----------------------------------------------------------------------------
-// StringEncrypter.java
-// -----------------------------------------------------------------------------
+/*
+ *  Changes copyright 2022 by Maksim Khramov
+ *  This program is free software; you can redistribute it and/or modify it under the
+ *  terms of the GNU General Public License as published by the Free Software
+ *  Foundation; either version 2 of the License, or (at your option) any later version.
+ *  This program is distributed in the hope that it will be useful, but WITHOUT ANY
+ *  WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A
+ *  PARTICULAR PURPOSE.  See the GNU General Public License for more details.
+ */
 
 package artofillusion.spmanager;
 
 // CIPHER / GENERATORS
+import java.security.GeneralSecurityException;
 import javax.crypto.Cipher;
 import javax.crypto.SecretKey;
-import javax.crypto.KeyGenerator;
 
 // KEY SPECIFICATIONS
 import java.security.spec.KeySpec;
@@ -16,16 +22,8 @@ import javax.crypto.spec.PBEKeySpec;
 import javax.crypto.SecretKeyFactory;
 import javax.crypto.spec.PBEParameterSpec;
 
-// EXCEPTIONS
-import java.security.InvalidAlgorithmParameterException;
-import java.security.NoSuchAlgorithmException;
-import java.security.InvalidKeyException;
-import java.security.spec.InvalidKeySpecException;
-import javax.crypto.NoSuchPaddingException;
-import javax.crypto.BadPaddingException;
-import javax.crypto.IllegalBlockSizeException;
-import java.io.UnsupportedEncodingException;
-import java.io.IOException;
+
+import java.util.logging.Logger;
 
 
 /**
@@ -41,45 +39,14 @@ import java.io.IOException;
  *@created    23 mars 2004
  */
 
-public class StringEncrypter
+public final class StringEncrypter
 {
+    private static final Logger logger = Logger.getLogger(StringEncrypter.class.getName());
+    
+    private Cipher ecipher;
+    private Cipher dcipher;
 
-    Cipher ecipher;
-    Cipher dcipher;
 
-
-    /**
-     *  Constructor used to create this object. Responsible for setting and
-     *  initializing this object's encrypter and decrypter Chipher instances
-     *  given a Secret Key and algorithm.
-     *
-     *@param  key        Secret Key used to initialize both the encrypter and
-     *      decrypter instances.
-     *@param  algorithm  Which algorithm to use for creating the encrypter and
-     *      decrypter instances.
-     */
-    StringEncrypter( SecretKey key, String algorithm )
-    {
-        try
-        {
-            ecipher = Cipher.getInstance( algorithm );
-            dcipher = Cipher.getInstance( algorithm );
-            ecipher.init( Cipher.ENCRYPT_MODE, key );
-            dcipher.init( Cipher.DECRYPT_MODE, key );
-        }
-        catch ( NoSuchPaddingException e )
-        {
-            System.out.println( "EXCEPTION: NoSuchPaddingException" );
-        }
-        catch ( NoSuchAlgorithmException e )
-        {
-            System.out.println( "EXCEPTION: NoSuchAlgorithmException" );
-        }
-        catch ( InvalidKeyException e )
-        {
-            System.out.println( "EXCEPTION: InvalidKeyException" );
-        }
-    }
 
 
     /**
@@ -90,7 +57,7 @@ public class StringEncrypter
      *@param  passPhrase  Pass Phrase used to initialize both the encrypter and
      *      decrypter instances.
      */
-    StringEncrypter( String passPhrase )
+    public StringEncrypter(String passPhrase )
     {
 
         // 8-bytes Salt
@@ -120,30 +87,9 @@ public class StringEncrypter
             dcipher.init( Cipher.DECRYPT_MODE, key, paramSpec );
 
         }
-        catch ( InvalidAlgorithmParameterException e )
+        catch (GeneralSecurityException gse )
         {
-            System.out.println( "EXCEPTION: InvalidAlgorithmParameterException" );
-            e.printStackTrace();
-        }
-        catch ( InvalidKeySpecException e )
-        {
-            System.out.println( "EXCEPTION: InvalidKeySpecException" );
-            e.printStackTrace();
-        }
-        catch ( NoSuchPaddingException e )
-        {
-            System.out.println( "EXCEPTION: NoSuchPaddingException" );
-            e.printStackTrace();
-        }
-        catch ( NoSuchAlgorithmException e )
-        {
-            System.out.println( "EXCEPTION: NoSuchAlgorithmException" );
-            e.printStackTrace();
-        }
-        catch ( InvalidKeyException e )
-        {
-            System.out.println( "EXCEPTION: InvalidKeyException" );
-            e.printStackTrace();
+          logger.severe(() -> "Security exception " + gse.getMessage());
         }
     }
 
@@ -155,7 +101,7 @@ public class StringEncrypter
      *@param  str  String to be encrypted
      *@return      <code>String</code> Encrypted version of the provided String
      */
-    public String encrypt( String str )
+    public String encrypt(String str )
     {
         try
         {
@@ -166,7 +112,7 @@ public class StringEncrypter
             byte[] enc = ecipher.doFinal( utf8 );
 
             // Encode bytes to base64 to get a string
-            return new sun.misc.BASE64Encoder().encode( enc );
+            return java.util.Base64.getEncoder().encodeToString(enc);
         }
         catch (Exception e) {}
         return null;
@@ -180,14 +126,12 @@ public class StringEncrypter
      *@param  str  Encrypted String to be decrypted
      *@return      <code>String</code> Decrypted version of the provided String
      */
-    public String decrypt( String str )
+    public String decrypt(String str )
     {
-
         try
         {
-
             // Decode base64 to get bytes
-            byte[] dec = new sun.misc.BASE64Decoder().decodeBuffer( str );
+            byte[] dec = java.util.Base64.getDecoder().decode(str);
 
             // Decrypt
             byte[] utf8 = dcipher.doFinal( dec );
@@ -200,113 +144,5 @@ public class StringEncrypter
     }
 
 
-    /**
-     *  The following method is used for testing the String Encrypter class.
-     *  This method is responsible for encrypting and decrypting a sample String
-     *  using several symmetric temporary Secret Keys.
-     */
-    public static void testUsingSecretKey()
-    {
-        try
-        {
-
-            System.out.println();
-            System.out.println( "+----------------------------------------+" );
-            System.out.println( "|  -- Test Using Secret Key Method --    |" );
-            System.out.println( "+----------------------------------------+" );
-            System.out.println();
-
-            String secretString = "Attack at dawn!";
-
-            // Generate a temporary key for this example. In practice, you would
-            // save this key somewhere. Keep in mind that you can also use a
-            // Pass Phrase.
-            SecretKey desKey = KeyGenerator.getInstance( "DES" ).generateKey();
-            SecretKey blowfishKey = KeyGenerator.getInstance( "Blowfish" ).generateKey();
-            SecretKey desedeKey = KeyGenerator.getInstance( "DESede" ).generateKey();
-
-            // Create encrypter/decrypter class
-            StringEncrypter desEncrypter = new StringEncrypter( desKey, desKey.getAlgorithm() );
-            StringEncrypter blowfishEncrypter = new StringEncrypter( blowfishKey, blowfishKey.getAlgorithm() );
-            StringEncrypter desedeEncrypter = new StringEncrypter( desedeKey, desedeKey.getAlgorithm() );
-
-            // Encrypt the string
-            String desEncrypted = desEncrypter.encrypt( secretString );
-            String blowfishEncrypted = blowfishEncrypter.encrypt( secretString );
-            String desedeEncrypted = desedeEncrypter.encrypt( secretString );
-
-            // Decrypt the string
-            String desDecrypted = desEncrypter.decrypt( desEncrypted );
-            String blowfishDecrypted = blowfishEncrypter.decrypt( blowfishEncrypted );
-            String desedeDecrypted = desedeEncrypter.decrypt( desedeEncrypted );
-
-            // Print out values
-            System.out.println( desKey.getAlgorithm() + " Encryption algorithm" );
-            System.out.println( "    Original String  : " + secretString );
-            System.out.println( "    Encrypted String : " + desEncrypted );
-            System.out.println( "    Decrypted String : " + desDecrypted );
-            System.out.println();
-
-            System.out.println( blowfishKey.getAlgorithm() + " Encryption algorithm" );
-            System.out.println( "    Original String  : " + secretString );
-            System.out.println( "    Encrypted String : " + blowfishEncrypted );
-            System.out.println( "    Decrypted String : " + blowfishDecrypted );
-            System.out.println();
-
-            System.out.println( desedeKey.getAlgorithm() + " Encryption algorithm" );
-            System.out.println( "    Original String  : " + secretString );
-            System.out.println( "    Encrypted String : " + desedeEncrypted );
-            System.out.println( "    Decrypted String : " + desedeDecrypted );
-            System.out.println();
-
-        }
-        catch ( NoSuchAlgorithmException e )
-        {
-        }
-    }
-
-
-    /**
-     *  The following method is used for testing the String Encrypter class.
-     *  This method is responsible for encrypting and decrypting a sample String
-     *  using using a Pass Phrase.
-     */
-    public static void testUsingPassPhrase()
-    {
-
-        System.out.println();
-        System.out.println( "+----------------------------------------+" );
-        System.out.println( "|  -- Test Using Pass Phrase Method --   |" );
-        System.out.println( "+----------------------------------------+" );
-        System.out.println();
-
-        String secretString = "Attack at dawn!";
-        String passPhrase = "My Pass Phrase";
-
-        // Create encrypter/decrypter class
-        StringEncrypter desEncrypter = new StringEncrypter( passPhrase );
-
-        // Encrypt the string
-        String desEncrypted = desEncrypter.encrypt( secretString );
-
-        // Decrypt the string
-        String desDecrypted = desEncrypter.decrypt( desEncrypted );
-
-        // Print out values
-        System.out.println( "PBEWithMD5AndDES Encryption algorithm" );
-        System.out.println( "    Original String  : " + secretString );
-        System.out.println( "    Encrypted String : " + desEncrypted );
-        System.out.println( "    Decrypted String : " + desDecrypted );
-        System.out.println();
-
-    }
-
-    /*
-     *  public static void main( String[] args )
-     *  {
-     *  testUsingSecretKey();
-     *  testUsingPassPhrase();
-     *  }
-     */
 }
 
